# code_connector

./: CMakeLists.txt  README.md  add_executables_to_gitignore.sh  ccls_index_gen_windows.c  code_connector_executable.c  code_connector_executable_windows.c  code_connector_shared.c  code_connector_shared.h  code_connector_shared_windows.c  history.tar.lrz  working-principles.md
assets/: code_connector_screencast.webm
doc/: code_connector.txt
plugin/: code_connector.vim  snippets.txt
